--- a/seite2.html
+++ b/seite2.html
@@ -8,11 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Willkommen auf meiner Seite!</h1>
+        <h1>Das ist die Seite 2!</h1>
         <p>Der Stil dieser Seite wird über eine externe CSS-Datei definiert.</p>
     </div>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit aperiam temporibus iure at error maxime! Reiciendis libero labore iure molestiae officiis amet accusamus, ea unde doloremque pariatur, voluptatum eius. Minus.
-
-<br><a href="seite2.html">Weiter zu Seite 2!</a>
+    <br><a href="index.html">Zurück zur Seite 1!</a>
 </body>
 </html>
