--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit aperiam temporibus iure at error maxime! Reiciendis libero labore iure molestiae officiis amet accusamus, ea unde doloremque pariatur, voluptatum eius. Minus.
 
 <br><a href="seite2.html">Weiter zu Seite 2!</a>
+<p>
+    <form>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+
+        <label for="email">E-Mail:</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="nachricht">Nachricht:</label>  
+
+        <textarea id="nachricht" name="nachricht" rows="4"></textarea>  
+
+
+        <button type="submit">Senden</button>
+    </form>
+
+</p>
+
 </body>
 </html><form action="submit.php" method="post">
 </form>
