code verbessert, css geändert

--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <img src="images/titelbild.jpg" class="hero-startbild">
+    </header>
+    <div class="text">NUR DER FCA</div>
     <div class="container">
-        <h1>Willkommen dsafsfauf meiner Seite!</h1>
+        <h1>Willkommen auf meiner Seite!</h1>
         <p>Der Stil dieser Seite wird über eine externe CSS-Datei definiert.</p>
     </div>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit aperiam temporibus iure at error maxime! Reiciendis libero labore iure molestiae officiis amet accusamus, ea unde doloremque pariatur, voluptatum eius. Minus.
+    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit aperiam temporibus iure at error maxime! Reiciendis libero labore iure molestiae officiis amet accusamus, ea unde doloremque pariatur, voluptatum eius. Minus.</p>
 
-<br><a href="seite2.html">Weiter zu Seite 2!</a>
-<p>
+    <p><a href="seite2.html">Weiter zu Seite 2!</a></p>
+    <p>
     <form>
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
@@ -28,10 +33,7 @@
 
 
         <button type="submit">Senden</button>
+    </html><form action="submit.php" method="post">
     </form>
-
-</p>
-
+    </p>
 </body>
-</html><form action="submit.php" method="post">
-</form>
