--- a/seite2.html
+++ b/seite2.html
@@ -11,7 +11,7 @@
         <h1>Das ist die Seite 2!</h1>
         <p>Der Stil dieser Seite wird über eine externe CSS-Datei definiert.</p>
     </div>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit aperiam temporibus iure at error maxime! Reiciendis libero labore iure molestiae officiis amet accusamus, ea unde doloremque pariatur, voluptatum eius. Minus.
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit aperiam temporibus iure at error maxime! Reiciendis libero labore iure molestiae officiis amet accusamus, ea unde doloremque pariatur, voluptatum eius. Minus.</p>>
     <br><a href="index.html">Zurück zur Seite 1!</a>
 </body>
 </html>
