--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <img src="images/titelbild.jpg" class="hero-startbild">
     </header>
-    <div class="text">NUR DER FCA</div>
+    <div class="titeltext">NUR DER FCA</div>
     <div class="container">
         <h1>Willkommen auf meiner Seite!</h1>
         <p>Der Stil dieser Seite wird über eine externe CSS-Datei definiert.</p>
