neue seite hinzugefügt mit forms

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="container">
         <h1>Willkommen auf meiner Seite!</h1>
         <p>Der Stil dieser Seite wird über eine externe CSS-Datei definiert.</p>
+    <p><a href="formular.html">Zum Formular</a></a></p>
     </div>
     
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit aperiam temporibus iure at error maxime! Reiciendis libero labore iure molestiae officiis amet accusamus, ea unde doloremque pariatur, voluptatum eius. Minus.</p>
